# src

./: .rosinstall  README.md
GeographicLib-1.34/: 00README.txt  CMakeLists.txt  NEWS  README.md
GeographicLib-1.34/cmake/: CMakeLists.txt  FindGeographicLib.cmake  project-config-version.cmake.in  project-config.cmake.in
GeographicLib-1.34/doc/: CMakeLists.txt  GeographicLib.dox  NETGeographicLib.dox  doxyfile-c.in  doxyfile-for.in  doxyfile-net.in  doxyfile.in  geodesic-c.dox  geodesic-for.dox  index.html.in  utilities.html.in
GeographicLib-1.34/examples/: CMakeLists.txt  GeoidToGTX.cpp  example-Accumulator.cpp  example-AlbersEqualArea.cpp  example-AzimuthalEquidistant.cpp  example-CassiniSoldner.cpp  example-CircularEngine.cpp  example-Constants.cpp  example-DMS.cpp  example-Ellipsoid.cpp  example-GeoCoords.cpp  (+31 more)
bar_detection/: CMakeLists.txt  package.xml
gps_process/: CMakeLists.txt  HowToRun.txt  package.xml  setup.py
gps_process/launch/: PointStamped.launch  gps_latlong.launch  gps_summarize.launch  tmp_sub.launch
gps_process/msg/: gps_hist_msg.msg
gps_process/nodes/: PointStamped.py  gps_latlong  gps_summarize  tmp_sub
hello_world/: CMakeLists.txt  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  aaa.ipynb  package.xml  speed.ipynb
maps/: map.pgm  map.yaml
omo_r1mini/: README.md
ros_env/: .bashrc.txt  README.md  Server_robot_setting  Server_setting  Server_setting_noetic  ananaconda.txt  git.txt  gps 4.txt  history.txt  omorobot.txt  opencv.txt  robot_chaser.txt  safevision  server_install_ros_melodic.sh  udev
(+383 files in other folders)
